--- a/index.html
+++ b/index.html
@@ -1,1 +1,26 @@
+<!DOCTYPE html>
+<html>
 
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width">
+  <title>Pure Diablo 3D Cards</title>
+  <link href="style.css" rel="stylesheet" type="text/css" />
+</head>
+
+<body>
+  <a href="https://www.purediablo.com/diablo-2/necromancer-summoning-skills" target="_blank">
+    <figure>
+      <img src="https://assets.codepen.io/1480814/necro.png" alt="Necromancer">
+      <figcaption>The Necro</figcaption>
+    </figure>
+  </a>
+  <a href="https://www.purediablo.com/strategy/diablo-2-guide-druid-summoner" target="_blank">
+    <figure>
+      <img src="https://assets.codepen.io/1480814/druide.png" alt="Druid">
+      <figcaption>The Druid</figcaption>
+    </figure>
+  </a>
+</body>
+
+</html>
